--- a/renovate.json
+++ b/renovate.json
@@ -1,12 +1,17 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
+    "config:base",
+    ":gitSignOff"
   ],
+  "minimumReleaseAge": "3 days",
+  "platformAutomerge": true,
   "packageRules": [
     {
       "matchManagers": ["gomod"],
       "matchDepTypes": ["indirect"],
+      "matchUpdateTypes": ["minor", "patch", "pin", "digest"],
+      "automerge": true
       "enabled": true
     }
   ]
