--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -95,16 +95,16 @@ related:
   includeNewer: true
   indices:
   - name: keywords
-    weight: '100'
+    weight: 100
   - name: tags
-    weight: '80'
+    weight: 80
   - name: categories
-    weight: '60'
+    weight: 60
   - name: series
-    weight: '60'
+    weight: 60
   - name: authors
-    weight: '10'
+    weight: 10
   - name: date
-    weight: '10'
+    weight: 10
   threshold: 10 # for testing, increase it to suit your case.
   toLower: false
